[project]
name = "cert-in-pipeline"
version = "1.0.0"
description = "Open-source vulnerability scanning pipeline with LLM analysis — reports to CERT-In"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.scripts]
cert-in-pipeline = "pipeline:cli"

[dependency-groups]
dev = []
